--- a/src/i18n/locales/zh-CN.json
+++ b/src/i18n/locales/zh-CN.json
@@ -1,7 +1,32 @@
 {
   "locale": {
-    "zh-CN": "简体中文",
+    "zh-cn": "简体中文",
     "en": "English"
+  },
+  "system": {
+    "title": "系统设置",
+    "language": "语言",
+    "theme": "主题",
+    "dark": "深色",
+    "light": "浅色",
+    "logout": "退出登录",
+    "profile": "个人资料",
+    "changePassword": "修改密码",
+    "changeAvatar": "修改头像",
+    "changePhone": "修改手机号"
+  },
+  "user": {
+    "name": "用户名",
+    "email": "邮箱",
+    "password": "密码",
+    "confirmPassword": "确认密码",
+    "avatar": "头像",
+    "phone": "手机号",
+    "address": "地址",
+    "gender": "性别",
+    "male": "男",
+    "female": "女",
+    "save": "保存"
   },
   "login": {
     "username": "用户名",
